# py-open-fft-poisson-solver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: minimal_electron_bunch_3d_plot.py
open_poisson_solver/: __init__.py  hockney.py
pyHockneySolver/: __init__.py
tests/: test_convolution_delta_charge_normalization.py  test_convolution_delta_charge_symmetry.py  test_gather_cic_vector.py  test_gradient_fd.py  test_greens_function_hockney.py  test_open_poisson_solver_basic.py  test_open_poisson_solver_plot_zavg.py  test_scatter_cic_array_charges.py  test_scatter_cic_scalar_charge.py  test_scatter_raises_outside_domain.py
