[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-poisson-solver"
version = "0.1.0"
description = "Single-process FFT-based open-boundary Poisson solver (Hockney) for particle bunches."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
]

[tool.setuptools]
packages = ["open_poisson_solver"]

